--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,14 +7,12 @@
     "declarationDir": "dist",
     "esModuleInterop": true,
     "lib": ["esnext"],
+    "inlineSourceMap": true,
     "module": "commonjs",
     "moduleResolution": "node",
     "noEmitOnError": false,
     "outDir": "dist",
-    "pretty": true,
-    "resolveJsonModule": true,
     "skipLibCheck": true,
-    "sourceMap": true,
     "target": "es2015"
   },
   "include": ["src/**/*"],
